This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Bus error in test_posix on Mac OS
Type: crash Stage:
Components: Extension Modules Versions: Python 3.1
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, eric.smith, loewis, mark.dickinson, r.david.murray
Priority: release blocker Keywords: patch

Created on 2009-05-05 14:12 by eric.smith, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
issue5943.patch mark.dickinson, 2009-05-05 16:36
Messages (8)
msg87244 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-05-05 14:12
I get a bus error in test_lchflags in test_posix.py on my Mac OS X 10.5 box.

I'll try and spend some time later today to debug this, but here's the
backtrace if anyone wants to look at it:

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_PROTECTION_FAILURE at address: 0x00000004
bytes2str (o=0x0, lock=1) at posixmodule.c:545
545             if(PyBytes_Check(o))
(gdb) bt
#0  bytes2str (o=0x0, lock=1) at posixmodule.c:545
#1  0x000e5d3c in posix_lchflags (self=0x353a08, args=0x0) at
posixmodule.c:1986
#2  0x000a6037 in PyEval_EvalFrameEx (f=0x25ff30, throwflag=0) at
Python/ceval.c:3744
#3  0x000a6e42 in PyEval_EvalFrameEx (f=0x25c4f0, throwflag=0) at
Python/ceval.c:3832
#4  0x000a78cb in PyEval_EvalCodeEx (co=0x624380, globals=0x601420,
locals=0x0, args=0x69c154, argcount=2, kws=0x255410, kwcount=0,
defs=0x4ae4bc, defcount=1, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#5  0x00033cc5 in function_call (func=0x4b1660, arg=0x69c148,
kw=0x6a8ed0) at Objects/funcobject.c:628
#6  0x000085c9 in PyObject_Call (func=0x4b1660, arg=0x69c148,
kw=0x6a8ed0) at Objects/abstract.c:2161
#7  0x000a352b in PyEval_EvalFrameEx (f=0x25c380, throwflag=0) at
Python/ceval.c:4045
#8  0x000a78cb in PyEval_EvalCodeEx (co=0x6243c8, globals=0x601420,
locals=0x0, args=0x690dac, argcount=2, kws=0x0, kwcount=0, defs=0x0,
defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#9  0x00033cc5 in function_call (func=0x4b16a8, arg=0x690da0, kw=0x0) at
Objects/funcobject.c:628
#10 0x000085c9 in PyObject_Call (func=0x4b16a8, arg=0x690da0, kw=0x0) at
Objects/abstract.c:2161
#11 0x0001ecfe in method_call (func=0x4b16a8, arg=0x69af70, kw=0x0) at
Objects/classobject.c:323
#12 0x000085c9 in PyObject_Call (func=0x45dc88, arg=0x69af70, kw=0x0) at
Objects/abstract.c:2161
#13 0x0005cec7 in slot_tp_call (self=0x0, args=0x69af70, kwds=0x0) at
Objects/typeobject.c:4956
#14 0x000085c9 in PyObject_Call (func=0x6a37d0, arg=0x69af70, kw=0x0) at
Objects/abstract.c:2161
#15 0x000a4ef8 in PyEval_EvalFrameEx (f=0x25c210, throwflag=0) at
Python/ceval.c:3957
#16 0x000a6e42 in PyEval_EvalFrameEx (f=0x25c090, throwflag=0) at
Python/ceval.c:3832
#17 0x000a78cb in PyEval_EvalCodeEx (co=0x62e7b8, globals=0x601420,
locals=0x0, args=0x690d84, argcount=2, kws=0x203e10, kwcount=0,
defs=0x0, defcount=0, kwdefs=0x0, closure=0x4aeab0) at Python/ceval.c:3180
#18 0x00033cc5 in function_call (func=0x4b56f0, arg=0x690d78,
kw=0x6a8e40) at Objects/funcobject.c:628
#19 0x000085c9 in PyObject_Call (func=0x4b56f0, arg=0x690d78,
kw=0x6a8e40) at Objects/abstract.c:2161
#20 0x000a352b in PyEval_EvalFrameEx (f=0x25bf20, throwflag=0) at
Python/ceval.c:4045
#21 0x000a78cb in PyEval_EvalCodeEx (co=0x62e608, globals=0x601420,
locals=0x0, args=0x69cf14, argcount=2, kws=0x0, kwcount=0, defs=0x0,
defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#22 0x00033cc5 in function_call (func=0x4b55d0, arg=0x69cf08, kw=0x0) at
Objects/funcobject.c:628
#23 0x000085c9 in PyObject_Call (func=0x4b55d0, arg=0x69cf08, kw=0x0) at
Objects/abstract.c:2161
#24 0x0001ecfe in method_call (func=0x4b55d0, arg=0x69ad30, kw=0x0) at
Objects/classobject.c:323
#25 0x000085c9 in PyObject_Call (func=0x45db48, arg=0x69ad30, kw=0x0) at
Objects/abstract.c:2161
#26 0x0005cec7 in slot_tp_call (self=0x0, args=0x69ad30, kwds=0x0) at
Objects/typeobject.c:4956
#27 0x000085c9 in PyObject_Call (func=0x69afb0, arg=0x69ad30, kw=0x0) at
Objects/abstract.c:2161
#28 0x000a4ef8 in PyEval_EvalFrameEx (f=0x25bc50, throwflag=0) at
Python/ceval.c:3957
#29 0x000a78cb in PyEval_EvalCodeEx (co=0x62e5c0, globals=0x601420,
locals=0x0, args=0x690d34, argcount=2, kws=0x203e00, kwcount=0,
defs=0x0, defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#30 0x00033cc5 in function_call (func=0x4b5588, arg=0x690d28,
kw=0x6a8db0) at Objects/funcobject.c:628
#31 0x000085c9 in PyObject_Call (func=0x4b5588, arg=0x690d28,
kw=0x6a8db0) at Objects/abstract.c:2161
#32 0x000a352b in PyEval_EvalFrameEx (f=0x25bae0, throwflag=0) at
Python/ceval.c:4045
#33 0x000a78cb in PyEval_EvalCodeEx (co=0x62e608, globals=0x601420,
locals=0x0, args=0x690d5c, argcount=2, kws=0x0, kwcount=0, defs=0x0,
defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#34 0x00033cc5 in function_call (func=0x4b55d0, arg=0x690d50, kw=0x0) at
Objects/funcobject.c:628
#35 0x000085c9 in PyObject_Call (func=0x4b55d0, arg=0x690d50, kw=0x0) at
Objects/abstract.c:2161
#36 0x0001ecfe in method_call (func=0x4b55d0, arg=0x69a910, kw=0x0) at
Objects/classobject.c:323
#37 0x000085c9 in PyObject_Call (func=0x45dbe8, arg=0x69a910, kw=0x0) at
Objects/abstract.c:2161
#38 0x0005cec7 in slot_tp_call (self=0x0, args=0x69a910, kwds=0x0) at
Objects/typeobject.c:4956
#39 0x000085c9 in PyObject_Call (func=0x69acd0, arg=0x69a910, kw=0x0) at
Objects/abstract.c:2161
#40 0x000a4ef8 in PyEval_EvalFrameEx (f=0x25b390, throwflag=0) at
Python/ceval.c:3957
#41 0x000a6e42 in PyEval_EvalFrameEx (f=0x25a390, throwflag=0) at
Python/ceval.c:3832
#42 0x000a6e42 in PyEval_EvalFrameEx (f=0x2594b0, throwflag=0) at
Python/ceval.c:3832
#43 0x000a78cb in PyEval_EvalCodeEx (co=0x4641d0, globals=0x4ca9c0,
locals=0x0, args=0x257fbc, argcount=1, kws=0x257fc0, kwcount=0,
defs=0x0, defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#44 0x000a5dfb in PyEval_EvalFrameEx (f=0x257e80, throwflag=0) at
Python/ceval.c:3842
#45 0x000a6e42 in PyEval_EvalFrameEx (f=0x2579a0, throwflag=0) at
Python/ceval.c:3832
#46 0x000a78cb in PyEval_EvalCodeEx (co=0x420968, globals=0x34d0c0,
locals=0x0, args=0x25794c, argcount=7, kws=0x257968, kwcount=0,
defs=0x4d23fc, defcount=3, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#47 0x000a5dfb in PyEval_EvalFrameEx (f=0x2577f0, throwflag=0) at
Python/ceval.c:3842
#48 0x000a78cb in PyEval_EvalCodeEx (co=0x4209f8, globals=0x34d0c0,
locals=0x0, args=0x914838, argcount=7, kws=0x914854, kwcount=0,
defs=0x4ccba4, defcount=3, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#49 0x000a5dfb in PyEval_EvalFrameEx (f=0x914610, throwflag=0) at
Python/ceval.c:3842
#50 0x000a78cb in PyEval_EvalCodeEx (co=0x392188, globals=0x34d0c0,
locals=0x0, args=0x21895c, argcount=0, kws=0x21895c, kwcount=0,
defs=0x48685c, defcount=18, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#51 0x000a5dfb in PyEval_EvalFrameEx (f=0x218820, throwflag=0) at
Python/ceval.c:3842
#52 0x000a78cb in PyEval_EvalCodeEx (co=0x43d068, globals=0x34d0c0,
locals=0x34d0c0, args=0x0, argcount=0, kws=0x0, kwcount=0, defs=0x0,
defcount=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3180
#53 0x000a7a9f in PyEval_EvalCode (co=0x0, globals=0x0, locals=0x0) at
Python/ceval.c:650
#54 0x000ccdd0 in PyRun_FileExFlags (fp=0xa05324c0, filename=0x448120
"Lib/test/regrtest.py", start=257, globals=0x34d0c0, locals=0x34d0c0,
closeit=1, flags=0xbffff52c) at Python/pythonrun.c:1697
#55 0x000cdc43 in PyRun_SimpleFileExFlags (fp=<value temporarily
unavailable, due to optimizations>, filename=0x448120
"Lib/test/regrtest.py", closeit=1, flags=0xbffff52c) at
Python/pythonrun.c:1182
#56 0x000dd140 in Py_Main (argc=4, argv=0x2000f0) at Modules/main.c:625
#57 0x00002799 in main (argc=4, argv=0xbffff690) at python.c:136
(gdb)
msg87245 - (view) Author: R. David Murray (r.david.murray) * (Python committer) Date: 2009-05-05 15:52
FreeBSD 6.3 also gives a segfault in test_posix.  Gentoo runs fine.
msg87249 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-05-05 16:30
Fedora Core 6 works okay.
msg87250 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-05-05 16:36
Does this patch fix the problem?
msg87252 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-05-05 16:52
Yes, that patch fixes the problem for me on Mac OS.
msg87256 - (view) Author: R. David Murray (r.david.murray) * (Python committer) Date: 2009-05-05 17:00
Fixes it on FreeBSD 6.3 as well.
msg87258 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-05-05 17:08
My Fedora Core 6 box still works with the patch.
msg87260 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-05-05 17:19
This is now fixed in r72340 (I came up with the same patch
independently, and just hadn't got around to commit it).
History
Date User Action Args
2022-04-11 14:56:48adminsetnosy: + benjamin.peterson
github: 50193
2009-05-05 17:19:21loewissetstatus: open -> closed

nosy: + loewis
messages: + msg87260

resolution: fixed
2009-05-05 17:08:59eric.smithsetmessages: + msg87258
2009-05-05 17:00:52r.david.murraysetmessages: + msg87256
2009-05-05 16:52:24eric.smithsetmessages: + msg87252
2009-05-05 16:36:35mark.dickinsonsetfiles: + issue5943.patch

nosy: + mark.dickinson
messages: + msg87250

keywords: + patch
2009-05-05 16:30:26eric.smithsetmessages: + msg87249
2009-05-05 15:52:22r.david.murraysetnosy: + r.david.murray
messages: + msg87245
2009-05-05 14:12:30eric.smithcreate