Issue #5943: Fix lchflags crash.